--- a/custom-addons/hr_discipline_case2/views/discipline_case_views.xml
+++ b/custom-addons/hr_discipline_case2/views/discipline_case_views.xml
@@ -16,73 +16,87 @@
             <field name="state" widget="statusbar" statusbar_visible="draft,submitted,resolved,escalate_to_committee,escalate_to_ceo,reject,reviewed,approve"/>
             </header>
 
-            <div class="d-flex justify-content-center align-items-center my-5">
-                <div class="card w-75 shadow-lg rounded">
+            <div class="d-flex justify-content-center align-items-center " style="padding-left:200px;padding-right:200px;">
+                <div class="card w-75 shadow-lg rounded" >
                     <div class="card-header text-center bg-primary text-white">
                         <h3 class="fw-bold text-white">Discipline Case</h3>
                     </div>
                     <div class="card-body">
                         <div class="row g-3">
+                            <div class="col-md-6 col-sm-12">
+                                <label for="employee_id" class="form-label fw-bold">Accuser</label>
+                                <field name="accuser_id" readonly="1" class="form-control" id="employee_id" />
+                            </div>
                           
                             <div class="col-md-6">
                                 <label for="name" class="form-label fw-bold">Case Reference</label>
-                                <field name="name" placeholder="Enter Case Reference" class="form-control"
+                                <field name="name" placeholder="Enter Case Reference" class="form-control" attrs="{'readonly':[('state','!=','draft')]}"
                                 />
                             </div>
-
-                          
+                        </div>
+                        <div class="row g-3">
                             <div class="col-md-6">
                                 <label for="case_description" class="form-label fw-bold">Case Description</label>
-                                <field name="case_description" placeholder="Describe the case" class="form-control"
+                                <field name="case_description" placeholder="Describe the case" class="form-control" attrs="{'readonly':[('state','!=','draft')]}"
                                 />
                             </div>
                             <div class="col-md-6">
                                 <label for="accused_employee_id" class="form-label fw-bold">Accused Employee</label>
-                                <field name="accused_employee_id" placeholder="Select Accused Employee" class="form-control"
-                                />
-                                
+                                <field name="accused_employee_id" placeholder="Select Accused Employee" class="form-control" attrs="{'readonly':[('state','!=','draft')]}"
+                                /> 
                             </div>
+                        </div>
+                        <div class="row g-3">
 
                             <!-- Row 3 -->
                             <div class="col-md-6">
                                 <label for="discipline_type" class="form-label fw-bold">Type of Discipline</label>
-                                <field name="discipline_type" placeholder="Select Discipline Type" class="form-control"
+                                <field name="discipline_type" placeholder="Select Discipline Type" class="form-control" attrs="{'readonly':[('state','!=','draft')]}"
                                  />
                             </div>
-                        
-
                             <!-- Row 5 -->
                             <div class="col-md-6" attrs="{'invisible': ['|',('is_committee','=',False),('state', '!=', 'escalate_to_committee'),('state', '!=', 'escalate_to_ceo'),('state', '!=', 'approve')]}">
                                 <label for="penalty_type" class="form-label fw-bold">Penalty Type</label>
                                 <field name="penalty_type" class="form-control" 
-                                attrs="{'readonly': [('is_committee', '=', False)]}"/>
+                                attrs="{'readonly': ['|',('state','!=','escalate_to_committee'),('is_committee', '=', False)]}"/>
                             </div>
+                        </div>
                         
+                        <div class="row g-3">
                             <!-- Row 6 -->
-                            <div class="col-md-6" attrs="{'invisible': ['|',('is_committee','=',False),('state', '!=', 'reject'),('state', '!=', 'approve'),('state', '!=', 'reviewed')]}" >
+                            <div class="col-md-6" attrs="{'invisible': [('state','in',['draft','submitted','escalate_to_committee','resolved'])]}" >
                                 <label for="reason_for_revision" class="form-label fw-bold">Reason for Revision</label>
                                 <field name="reason_for_revision" class="form-control" readonly="0"
-                                 attrs="{'readonly': [('is_ceo', '=', False)]}"/>
+                                 attrs="{'readonly': ['|',('state','!=','escalate_to_ceo'),('is_ceo', '=', False)]}"/>
                             </div>
                             <div class="col-md-6" attrs="{'invisible': ['|', ('is_hr', '=', False), ('state', '!=', 'submitted'),('state', '!=', 'resolved'),('state', '!=', 'escalate_to_committee'),('state', '!=', 'escalate_to_ceo'),('state', '!=', 'approve'),('state', '!=', 'rejected')]}">
                                 <label for="accused_response" class="form-label fw-bold">Accused Response</label>
                                 <field name="accused_response" class="form-control"
-                                attrs="{'readonly': [('is_hr', '=', False)]}"/>
+                                attrs="{'readonly': ['|',('state','!=','submitted'),('is_hr', '=', False)]}"/>
                             </div>
+                        </div>
+                        <div class="row g-3">
 
                             <!-- Row 7 -->
                             <div class="col-md-6">
                                 <label for="documents" class="form-label fw-bold">Attachments</label>
-                                <field name="documents" widget="many2many_binary" class="form-control"/>
+                                <field name="documents" widget="many2many_binary" class="form-control"  attrs="{'readonly': [('state','!=','draft')]}"/>
                             </div>
                               <div class="col-md-6" attrs="{'invisible': ['|',('is_committee','=',False),('state', '!=', 'escalate_to_committee'),('state', '!=', 'escalate_to_ceo'),('state', '!=', 'approve')]}">
                                 <label for="witness_by_accused" class="form-label fw-bold">Witness</label>
                                 <field name="witness_by_accused" class="form-control"
-                                attrs="{'readonly': [('is_committee', '=', False)]}"/>
+                                attrs="{'readonly': ['|',('state','!=','escalate_to_committee'),('is_committee', '=', False)]}"/>
+                            </div>
+                        </div>
+                        <div class="row g-3">
+                              <div class="col-md-6" attrs="{'invisible': ['|', ('is_committee', '=', False), ('state', '!=', 'reject')]}">
+                                <label for="case_revision" class="form-label fw-bold">Revision by committee</label>
+                                <field name="case_revision" class="form-control"
+                                attrs="{'invisible': ['|', ('is_committee', '=', False), ('state', '!=', 'reject')]}"/>
                             </div>
 
                             <!-- Action Buttons -->
-                            <div class="col-md-12 d-flex justify-content-center mt-4">
+                            <div class="col-md-6 d-flex justify-content-center mt-4">
                                 <button name="action_submit" 
                                         type="object" 
                                         string="Submit Case" 
@@ -105,7 +119,7 @@
                                         type="object" 
                                         string="Escalate to CEO" 
                                         class="btn btn-success mx-2 btn-lg px-5 py-2 shadow-sm rounded-pill"
-                                        attrs="{'invisible': [('is_committee', '=', False)]}"
+                                        attrs="{'invisible': ['|',('state','=','reject'),('is_committee', '=', False)]}"
                                         />
                                 <button name="action_approve" 
                                         type="object" 
@@ -124,6 +138,7 @@
                                         attrs="{'invisible': ['|', ('is_committee', '=', False), ('state', '!=', 'reject')]}"/>
                             </div>
                         </div>
+                       
                     </div>
                 </div>
             </div>
