--- a/addons/survey/views/survey_templates.xml
+++ b/addons/survey/views/survey_templates.xml
@@ -54,14 +54,14 @@
                         </t>
                     </t>
                 </div>
-                <div class="o_survey_brand_message float-end rounded me-3 border">
+                <!-- <div class="o_survey_brand_message float-end rounded me-3 border">
                     <div class="px-2 py-2 d-inline-block" t-call="web.brand_promotion_message">
                         <t t-set="_message"></t>
                         <t t-set="_utm_medium" t-valuef="survey"/>
                     </div>
                     <div class="o_survey_navigation_wrapper d-inline-block" t-call="survey.survey_navigation">
                     </div>
-                </div>
+                </div> -->
             </div>
         </xpath>
     </template>
