--- a/custom-addons/hr_bonus_managment/views/hr_bonus_managment_view.xml
+++ b/custom-addons/hr_bonus_managment/views/hr_bonus_managment_view.xml
@@ -31,15 +31,15 @@
                 <header>
                     <button name="action_submit" type="object" string="Submit" class="btn-primary"
                         states="draft"
-                        groups="hr_bonus_managment.group_work_unit_manager,base.group_system"
+                        groups="user_group.group_department_manager,base.group_system"
                         confirm="Are you sure you want to process this? Plaese double check it" />
                     <button name="action_approve" type="object" string="Approve" class="btn-success"
                         states="submitted"
-                        groups="hr_bonus_managment.group_hr_officer,base.group_system"
+                        groups="user_group.group_hr_office,base.group_system"
                         confirm="Are you sure you want to process this? Plaese double check it" />
                     <button name="action_reject" type="object" string="Reject" class="btn-danger"
                         states="submitted"
-                        groups="hr_bonus_managment.group_hr_officer,base.group_system"
+                        groups="user_group.group_hr_office,base.group_system"
                     />
                     <field name="state" widget="statusbar"
                         statusbar_visible="draft,submitted,approved,rejected" />
