--- a/custom-addons/transfer/views/transfer_request_views.xml
+++ b/custom-addons/transfer/views/transfer_request_views.xml
@@ -49,33 +49,35 @@
 
                     <!-- Approve and Reject buttons for DCEO -->
                     <button name="approve_by_dceo" type="object" string="Approve"
-                        attrs="{'invisible': [('status', '!=', 'approved_by_new')]}" groups="planning.group_dceo" class="btn-success"
+                        attrs="{'invisible': [('status', '!=', 'approved_by_new')]}" groups="user_group.group_admin_dceo" class="btn-success"
                         confirm="Are you sure you want to Approve the Request?"
                         />
                     <button name="reject" type="object" string="Reject"
-                        attrs="{'invisible': [('status', '!=', 'approved_by_new')]}" groups="planning.group_dceo" class="btn-danger"
+                        attrs="{'invisible': [('status', '!=', 'approved_by_new')]}" groups="user_group.group_admin_dceo" class="btn-danger"
                         confirm="Are you sure you want to Reject the Request?"
                         />
 
                     <!-- Approve and Reject buttons for CEO -->
                     <button name="approve_by_ceo" type="object" string="Approve"
-                        attrs="{'invisible': [('status', '!=', 'approved_by_dceo')]}" groups="planning.group_ceo" class="btn-success"
+                        attrs="{'invisible': [('status', '!=', 'approved_by_dceo')]}" groups="user_group.group_ceo" class="btn-success"
                         confirm="Are you sure you want to Approve the Request?"
                         />
                     <button name="reject" type="object" string="Reject"
-                        attrs="{'invisible': [('status', '!=', 'approved_by_dceo')]}" groups="planning.group_ceo" class="btn-danger"
+                        attrs="{'invisible': [('status', '!=', 'approved_by_dceo')]}" groups="user_group.group_ceo" class="btn-danger"
                         confirm="Are you sure you want to Reject the Request?"
                         />
 
                     <!-- Process transfer button for HR Office -->
                     <button name="hr_office_proceed" type="object" string="Process the Transfer"
-                        attrs="{'invisible': [('status', '!=', 'approved_by_ceo')]}" groups="planning.group_hr_office" class="btn-success"
+                        attrs="{'invisible': [('status', '!=', 'approved_by_ceo')]}" groups="user_group.group_hr_office" class="btn-success"
                         confirm="Are you sure you want to procced the Request?"
                         />
 
-                    <field name="status" widget="statusbar" statusbar_visible="draft,submitted,approved_by_current,approved_by_new,approved_by_dceo,approved_by_ceo,completed,rejected"/>
+                    <field name="status" widget="statusbar" statusbar_visible="draft,submitted,approved_by_current,approved_by_new,approved_by_dceo,approved_by_ceo,completed,rejected" attrs="{'invisible':[('is_creator','=',True)]}"/>
+                    <field name="employee_combined_state" widget="statusbar" statusbar_visible="draft,pending,completed,rejected" attrs="{'invisible':[('is_creator','=',False)]}"/>
                 </header>
                 <group>
+                    <field name="title" invisible="1"/>
                     <field name="is_current_manager" invisible="1"/>
                     <field name="is_new_manager" invisible="1"/>
                     <field name="is_dceo" invisible="1"/>
@@ -88,15 +90,15 @@
                 <sheet class="p-2">
                     <group>
                         <group>
-                            <field name="employee_id" readonly="1"/>
-                            <field name="department_id" readonly="1" options="{'no_create_edit': True}"/>
-                            <field name="new_department_id" attrs="{'readonly':[('status','!=','draft')]}" options="{'no_create_edit': True}"/>
+                            <field name="employee_id" readonly="1" options="{'no_open':True}"/>
+                            <field name="department_id" readonly="1" options="{'no_open':True}"/>
+                            <field name="new_department_id" attrs="{'readonly':[('status','!=','draft')]}" options="{'no_create': True,'no_open':True}"/>
                         </group>
                         <group>
                             <field name="email" readonly="1"/>
                             <field name="phone" readonly="1"/>
-                            <field name="requested_position" attrs="{'readonly':[('status','!=','draft')]}"/>
-                            <field name="current_job_position" readonly="1"/>
+                            <field name="requested_position" attrs="{'readonly':[('status','!=','draft')]}" options="{'no_create': True,'no_open':True}"/>
+                            <field name="current_job_position" readonly="1" options="{'no_open':True}"/>
                         </group>
                     </group>
                 </sheet>
@@ -112,28 +114,28 @@
                     <!-- Current Department Comment -->
                     <page string="Current Department Comment" attrs="{'invisible':[('status','in',['draft'])]}">
                         <group>
-                            <field name="current_dep_comment"  attrs="{'readonly':[('is_current_manager','=',False)]}"/>
+                            <field name="current_dep_comment"  attrs="{'readonly':['|',('status','!=','submitted'),('is_current_manager','=',False)]}"/>
                         </group>
                     </page>
 
                     <!-- New Department Comment -->
                     <page string="New Department Comment" attrs="{'invisible':[('status','in',['draft', 'submitted'])]}">
                         <group>
-                            <field name="new_dep_comment" attrs="{'readonly':[('is_new_manager','=',False)]}"/>
+                            <field name="new_dep_comment" attrs="{'readonly':['|',('status','!=','approved_by_current'),('is_new_manager','=',False)]}"/>
                         </group>
                     </page>
 
                     <!-- DCEO Comment -->
                     <page string="D/CEO Comment" attrs="{'invisible':[('status','in',['draft', 'submitted', 'approved_by_current'])]}">
                         <group>
-                            <field name="dceo_comment" attrs="{'readonly':[('is_dceo','=',False)]}"/>
+                            <field name="dceo_comment" attrs="{'readonly':['|',('status','!=','approved_by_new'),('is_dceo','=',False)]}"/>
                         </group>
                     </page>
 
                     <!-- CEO Comment -->
                     <page string="CEO Comment" attrs="{'invisible':[('status','in',['draft', 'submitted', 'approved_by_current', 'approved_by_new'])]}">
                         <group>
-                            <field name="ceo_comment" attrs="{'readonly':[('is_ceo','=',False)]}"/>
+                            <field name="ceo_comment" attrs="{'readonly':['|',('status','!=','approved_by_dceo'),('is_ceo','=',False)]}"/>
                         </group>
                     </page>
                 </notebook>
@@ -147,8 +149,6 @@
         <field name="name">Transfer Request</field>
         <field name="res_model">transfer.request</field>
         <field name="view_mode">tree,form</field>
-        <!-- <field name="domain">[]</field>
-        <field name="context">{}</field> -->
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
             Click New to create a new Strategic plan.
